parser/sample_tests/ours/bad7.txt

*** Error line 2.
class Cow extends Animal {
^^^^^
*** syntax error

